--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,227 @@
-requests==2.28.1
-openpyxl==3.0.10
-python-dotenv==1.0.0
-apscheduler==3.10.1
+altgraph==0.17.4
+annotated-types==0.7.0
+anyio==4.4.0
+app==0.0.1
+appdirs==1.4.4
+APScheduler==3.10.4
+arabic-reshaper==3.0.0
+asgiref==3.8.1
+asn1crypto==1.5.1
+asttokens==2.4.1
+attrs==23.2.0
+barcode==1.0.4
+beautifulsoup4==4.12.3
+bitarray==2.9.2
+bitstring==4.2.3
+blinker==1.8.2
+blis==1.0.1
+Brotli==1.1.0
+bs4==0.0.2
+cachetools==5.4.0
+catalogue==2.0.10
+certifi==2024.6.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+chromedriver-autoinstaller==0.6.4
+click==8.1.7
+cloudpathlib==0.20.0
+cloudscraper==1.2.71
+colorama==0.4.6
+comm==0.2.2
+confection==0.1.5
+cryptography==43.0.1
+cssselect==1.2.0
+cssselect2==0.7.0
+cymem==2.0.10
+debugpy==1.8.9
+decorator==5.1.1
+distro==1.9.0
+Django==5.1.2
+django-bootstrap5==24.3
+django-cors-headers==4.6.0
+django-crispy-forms==2.3
+django-environ==0.11.2
+django-webpack-loader==3.1.1
+ecdsa==0.19.0
+environ==1.0
+esptool==4.8.1
+et-xmlfile==1.1.0
+executing==2.1.0
+fake-useragent==1.5.1
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+Flask-Testing==0.8.1
+fonttools==4.55.0
+fuzzywuzzy==0.18.0
+google==3.0.0
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.137.0
+google-auth==2.32.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.63.2
+greenlet==3.1.1
+grpcio==1.64.1
+grpcio-status==1.62.2
+gunicorn==23.0.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+html5lib==1.1
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+hvac==2.3.0
+hyperframe==6.0.1
+idna==3.7
+importlib_metadata==8.4.0
+intelhex==2.3.0
+ipykernel==6.29.5
+ipython==8.29.0
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.4
+joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kaitaistruct==0.10
+langcodes==3.5.0
+language_data==1.3.0
+Levenshtein==0.26.1
+lxml==5.3.0
+lxml_html_clean==0.2.2
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+murmurhash==1.0.11
+mysql-connector-python==9.1.0
+mysqlclient==2.2.5
+nest-asyncio==1.6.0
+ntplib==0.4.0
+numpy==2.0.2
+openai==1.35.13
+openpyxl==3.1.5
+optional-django==0.3.0
+oscrypto==1.3.0
+outcome==1.3.0.post0
+packaging==24.1
+pandas==2.2.2
+parse==1.20.2
+parso==0.8.4
+pefile==2023.2.7
+pillow==10.4.0
+platformdirs==4.3.6
+preshed==3.0.9
+prompt_toolkit==3.0.48
+proto-plus==1.24.0
+protobuf==4.25.3
+psutil==6.0.0
+psycopg2-binary==2.9.10
+pt_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl#sha256=c304fa04db3af73cd08a250feacf560506e15a2ec2469bd1b09f06847f6b455c
+pure_eval==0.2.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydivert==2.1.0
+pydyf==0.11.0
+pyee==11.1.1
+Pygments==2.18.0
+pyHanko==0.25.1
+pyhanko-certvalidator==0.26.3
+pyinstaller==6.10.0
+pyinstaller-hooks-contrib==2024.8
+pyOpenSSL==24.2.1
+pyotp==2.9.0
+pyparsing==3.1.2
+pypdf==5.1.0
+pyphen==0.15.0
+pyppeteer==2.0.0
+pyquery==2.0.1
+pyserial==3.5
+PySocks==1.7.1
+python-barcode==0.15.1
+python-bidi==0.6.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-Levenshtein==0.26.1
+python-magic==0.4.27
+python-magic-bin==0.4.14
+pytz==2024.1
+pywin32==308
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
+pyzmq==26.2.0
+qrcode==8.0
+RapidFuzz==3.10.1
+react==4.3.0
+reedsolo==1.7.0
+reportlab==4.2.5
+requests==2.32.3
+requests-html==0.10.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rsa==4.9
+scikit-learn==1.5.2
+scipy==1.14.1
+selenium==4.25.0
+selenium-stealth==1.0.6
+selenium-wire==5.1.0
+setuptools==73.0.1
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.5
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.35
+sqlparse==0.5.1
+srsly==2.4.8
+stack-data==0.6.3
+svglib==1.5.1
+tailwindcss==0.0.1
+thinc==8.3.2
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+tornado==6.4.2
+tqdm==4.66.4
+traitlets==5.14.3
+trio==0.25.1
+trio-websocket==0.11.1
+typer==0.14.0
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
+undetected-chromedriver==3.5.5
+uritemplate==4.1.1
+uritools==4.0.3
+urllib3==1.26.20
+w3lib==2.2.1
+wasabi==1.1.3
+wcwidth==0.2.13
+weasel==0.4.1
+weasyprint==63.0
+webdriver-manager==4.0.2
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==10.4
+Werkzeug==3.0.3
+wheel==0.43.0
+whitenoise==6.8.2
+wrapt==1.17.0
+wsproto==1.2.0
+xhtml2pdf==0.2.16
+xlrd==2.0.1
+xmltodict==0.14.1
+zipp==3.20.1
+zopfli==0.2.3.post1
+zstandard==0.23.0
